--- a/course.html
+++ b/course.html
@@ -6,63 +6,16 @@
   <title>Courses</title>
 
   <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background: #f0fdf4;
-      margin: 0;
-      padding: 0;
-    }
-
-    .nav-header {
-      background: #1b4332;
-      color: white;
-      padding: 15px 20px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    .add-btn {
-      background: #40916c;
-      padding: 8px 15px;
-      border-radius: 5px;
-      color: white;
-      text-decoration: none;
-    }
-
-    .course-container {
-      width: 90%;
-      max-width: 600px;
-      margin: 20px auto;
-      background: white;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-    }
-
-    .course-item {
-      padding: 15px;
-      margin: 10px 0;
-      background: #d8f3dc;
-      border-radius: 8px;
-      font-size: 18px;
-    }
-
-    .back-container {
-      text-align: center;
-      margin-top: 20px;
-    }
-
-    .back-btn {
-      background: #1b4332;
-      padding: 8px 15px;
-      border-radius: 5px;
-      color: white;
-      text-decoration: none;
-    }
+    body { font-family: 'Segoe UI', sans-serif; background: #f0fdf4; margin:0; padding:0; }
+    .nav-header { background: #1b4332; color:white; padding:15px 20px; display:flex; justify-content:space-between; align-items:center; }
+    .add-btn { background:#40916c; padding:8px 15px; border-radius:5px; color:white; text-decoration:none; }
+    .course-container { width:90%; max-width:600px; margin:20px auto; background:white; padding:20px; border-radius:10px; box-shadow:0 4px 10px rgba(0,0,0,0.1); }
+    .course-item { padding:15px; margin:10px 0; background:#d8f3dc; border-radius:8px; font-size:18px; cursor:pointer; transition:0.2s; }
+    .course-item:hover { background:#b7e4c7; }
+    .back-container { text-align:center; margin-top:20px; }
+    .back-btn { background:#1b4332; padding:8px 15px; border-radius:5px; color:white; text-decoration:none; }
   </style>
 </head>
-
 <body>
 
   <div class="nav-header">
@@ -70,9 +23,8 @@
     <a href="create_course.html" class="add-btn">+ Add Course</a>
   </div>
 
-  <div class="course-container">
+  <div class="course-container" id="courseList">
     <h3>Your Courses</h3>
-    <div id="courseList"></div>
   </div>
 
   <div class="back-container">
@@ -80,44 +32,34 @@
   </div>
 
 <script>
-  function loadCourses() {
-    let courses = JSON.parse(localStorage.getItem("courses")) || [];
+function loadCourses() {
+  let courses = JSON.parse(localStorage.getItem("courses"));
 
-    const defaultCourses = [
-      { name: "Web Development", instructor: "Default Instructor" },
-      { name: "Programming Fundamentals", instructor: "Prof. Santos" },
-      { name: "Database Systems", instructor: "Prof. Ramirez" },
-      { name: "Computer Networks", instructor: "Prof. Dela Cruz" },
-      { name: "Software Engineering", instructor: "Prof. Hernandez" }
+  // Default courses: ONLY TWO
+  if (!courses || courses.length === 0) {
+    courses = [
+      { name: "Web Development", instructor: "Prof. Jerome A Yanga" },
+      { name: "Computer Programming", instructor: "Prof. Santos" }
     ];
-
-    // ADD DEFAULT COURSES IF NOT EXISTING
-    defaultCourses.forEach(defaultCourse => {
-      const exists = courses.some(c => c.name === defaultCourse.name);
-      if (!exists) {
-        courses.push(defaultCourse);
-      }
-    });
-
     localStorage.setItem("courses", JSON.stringify(courses));
-
-    let container = document.getElementById("courseList");
-    container.innerHTML = "";
-
-    // MAKE EACH COURSE TOUCHABLE & CLICKABLE
-    courses.forEach(course => {
-      container.innerHTML += `
-        <a href="create.html" style="text-decoration:none; color:black;">
-          <div class="course-item" style="cursor:pointer;">
-            <strong>${course.name}</strong><br>
-            Instructor: ${course.instructor}
-          </div>
-        </a>
-      `;
-    });
   }
 
-  loadCourses();
+  const container = document.getElementById("courseList");
+  container.innerHTML = "";
+
+  courses.forEach(course => {
+    container.innerHTML += `
+      <a href="create.html" style="text-decoration:none; color:black;">
+        <div class="course-item">
+          <strong>${course.name}</strong><br>
+          Instructor: ${course.instructor}
+        </div>
+      </a>
+    `;
+  });
+}
+
+loadCourses();
 </script>
 
 </body>
