--- a/logIn.html
+++ b/logIn.html
@@ -90,23 +90,64 @@
       <input type="password" id="password" placeholder="Password" required>
       <button type="submit">Login</button>
     </form>
-    <a href="frontpage.html">← Back to Home</a>
+    <a href="../">← Back to Home</a>
   </div>
 
   <script>
-    document.getElementById("loginForm").addEventListener("submit", function(e) {
+    document.getElementById("loginForm").addEventListener("submit", async function(e) {
       e.preventDefault(); 
+      const form = e.target;
+      const email = form.email.value;
+      const password = form.password.value;
+      const API_URL = "./backend/login.php";
 
-      const email = document.getElementById("email").value;
-      const password = document.getElementById("password").value;
+      try {
+          const response = await fetch(API_URL, {
+              method: "POST",
+              headers: { "Content-Type": "application/json" },
+              body: JSON.stringify({ email, password })
+          });
 
-      if (email === "Acadease123@gmail.com" && password === "acadease123") {
-        alert("Login successful!");
-        window.location.href = "dashboard.html"; 
-      } else {
-        alert("Invalid email or password.");
+          const result = await response.json();
+
+          if (response.ok && result.success) {
+              // Login OK — redirect immediately
+              window.location.href = "dashboard.html";
+          } else {
+              alert(result.message || "Invalid login");
+          }
+
+      } catch (error) {
+          console.error("Error during login:", error);
+          alert("An error occurred. Please try again later.");
       }
     });
+
+
+    async function checkLoginStatus() {
+      const API_URL = "./backend/login.php";
+
+      try {
+          const response = await fetch(API_URL, {
+              method: "GET", // Use the new GET method
+              headers: {
+                  "Content-Type": "application/json"
+              }
+          });
+
+          const result = await response.json();
+
+          if (response.ok && result.isLoggedIn) {
+              console.log("User is logged in. User ID:", result.userId);
+              window.location.href = "dashboard.html"; // Redirect to login page
+          } 
+      } catch (error) {
+          console.error("Network or server error:", error);
+          // Handle critical errors (e.g., show maintenance message)
+      }
+  }
+
+  window.onload = checkLoginStatus;
   </script>
 </body>
 </html>
