--- a/logIn.html
+++ b/logIn.html
@@ -90,7 +90,7 @@
       <input type="password" id="password" placeholder="Password" required>
       <button type="submit">Login</button>
     </form>
-    <a href="../">← Back to Home</a>
+    <a href="./">← Back to Home</a>
   </div>
 
   <script>
