fixing my dashboard, and index, and log in

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <section class="hero">
     <div>
       <h2> A Online Portal</h2>
-      <p>AcadEase helps students and teachers stay organized with assignments, schedules, and communication – all in one powerful platform.</p>
+      <p>AcadEase helps students and teachers stay organized with assignments, schedules, and communication  all in one powerful platform.</p>
       <a href="#" class="btn" id="getStartedBtn">Get Started</a>
 
       <div id="authButtons" style="display: none; margin-top: 20px;">
