--- a/dashboard.html
+++ b/dashboard.html
@@ -3,12 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AcadEase Navigation</title>
+  <title>Dashboard - AcadEase</title>
   <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
     body {
       font-family: 'Segoe UI', sans-serif;
-      margin: 0;
       background: #f0fdf4;
+      min-height: 100vh;
     }
 
     header {
@@ -18,6 +24,7 @@
       justify-content: space-between;
       align-items: center;
       padding: 15px 20px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     }
 
     header h1 {
@@ -25,10 +32,22 @@
       font-size: 1.5rem;
     }
 
+    .user-info {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+
+    .user-email {
+      font-size: 0.9rem;
+      opacity: 0.9;
+    }
+
     .menu-icon {
       font-size: 26px;
       cursor: pointer;
       user-select: none;
+      padding: 5px;
     }
 
     .side-nav {
@@ -55,22 +74,14 @@
       padding: 15px 25px;
       font-size: 1.1rem;
       transition: 0.3s;
-    }
-
-    .side-nav button {
       border: none;
       background: none;
-      outline: none;
-      cursor: pointer;
       width: 100%;
       text-align: left;
+      cursor: pointer;
     }
 
-    .side-nav button:hover {
-      background-color: rgba(255, 255, 255, 0.11);
-    }
-
-    .side-nav a:hover {
+    .side-nav a:hover, .side-nav button:hover {
       background: #40916c;
     }
 
@@ -91,121 +102,210 @@
 
     main {
       padding: 40px 20px;
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+
+    .welcome-section {
+      text-align: center;
+      margin-bottom: 40px;
+    }
+
+    .welcome-section h1 {
+      color: #1b4332;
+      margin-bottom: 20px;
+      font-size: 2.5rem;
+    }
+
+    .welcome-section p {
+      color: #555;
+      font-size: 1.1rem;
+      line-height: 1.6;
+      max-width: 800px;
+      margin: 0 auto;
+    }
+
+    .dashboard-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 20px;
+      margin-top: 30px;
+    }
+
+    .dashboard-card {
+      background: white;
+      padding: 25px;
+      border-radius: 10px;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+      transition: transform 0.3s;
+    }
+
+    .dashboard-card:hover {
+      transform: translateY(-5px);
+    }
+
+    .dashboard-card h3 {
+      color: #1b4332;
+      margin-bottom: 15px;
+      font-size: 1.3rem;
+    }
+
+    .assignments-section {
+      margin-top: 40px;
+    }
+
+    .assignments-section h2 {
+      color: #1b4332;
+      margin-bottom: 20px;
       text-align: center;
     }
 
-    main h2 {
+    .assignment-item {
+      background: white;
+      padding: 20px;
+      margin: 15px auto;
+      border-radius: 10px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      max-width: 600px;
+      border-left: 4px solid #40916c;
+    }
+
+    .assignment-item h3 {
       color: #1b4332;
-      margin-top: 50px;
+      margin-bottom: 10px;
+    }
+
+    .assignment-item p {
+      color: #666;
+      margin-bottom: 10px;
+    }
+
+    .assignment-item .deadline {
+      color: #d9534f;
+      font-weight: bold;
+    }
+
+    .empty-state {
+      text-align: center;
+      color: #666;
+      padding: 40px;
+      background: white;
+      border-radius: 10px;
+      margin: 20px auto;
+      max-width: 500px;
     }
   </style>
 </head>
-
-<script>
-  function displayAssignments() {
-    let container = document.getElementById("assignmentList");
-    let assignments = JSON.parse(localStorage.getItem("assignments")) || [];
-
-    container.innerHTML = "";
-
-    assignments.forEach(a => {
-      container.innerHTML += `
-        <div style="
-          background:white;
-          padding:15px;
-          margin:10px auto;
-          width:90%;
-          max-width:500px;
-          border-radius:10px;
-          box-shadow:0 2px 5px rgba(0,0,0,0.2);">
-          
-          <h3>${a.title}</h3>
-          <p>${a.description}</p>
-          <strong>Deadline: ${a.deadline}</strong>
-        </div>
-      `;
-    });
-  }
-
-  displayAssignments();
-</script>
-
 <body>
   <header>
-    <h1>AcadEase</h1>
-    <span class="menu-icon" onclick="toggleMenu()">☰</span>
+    <h1>AcadEase Dashboard</h1>
+    <div class="user-info">
+      <span class="menu-icon" onclick="toggleMenu()">☰</span>
+    </div>
   </header>
 
   <div class="side-nav" id="sideNav">
-    <a href="create.html">📝 Assignments</a>
-    <a href="course.html">📘 Courses</a>
+    <a href="create.html">📝 Create Assignment</a>
+    <a href="course.html">📘 My Courses</a>
     <a href="#schedule">📅 Schedule</a>
     <a href="#grades">📊 Grades</a>
-    <button onclick="logout();">Logout</button>
-</div>
-
-
-<div id="assignmentList"></div>
+    <button onclick="logout()">🚪 Logout</button>
+  </div>
 
   <div class="overlay" id="overlay" onclick="toggleMenu()"></div>
 
   <main>
-    <h1>Welcome to AcadEase Dashboard</h1>
-    <p>AcadEase is a simple to use academic management platform that helps students easily manage their academic work,
-       schedules, and deadlines. The platform has an organized and intuitive design that helps students track important 
-       deadlines, keep track of their classes, and manage expectations for academic success. AcadEase is easy to navigate, 
-       and, with its helpful features, it promotes studying and productivity in a simple way that helps to elevate students 
-       every day.</p>
-    
+    <div class="welcome-section">
+      <h1>Welcome to AcadEase Dashboard</h1>
+      <p>AcadEase is a simple to use academic management platform that helps students easily manage their academic work,
+         schedules, and deadlines. The platform has an organized and intuitive design that helps students track important 
+         deadlines, keep track of their classes, and manage expectations for academic success.</p>
+    </div>
+
+    <div class="dashboard-grid">
+      <div class="dashboard-card">
+        <h3>📅 Today's Schedule</h3>
+        <p>View your classes and tasks for today</p>
+      </div>
+      <div class="dashboard-card">
+        <h3>📚 Upcoming Assignments</h3>
+        <p>Check assignments due soon</p>
+      </div>
+      <div class="dashboard-card">
+        <h3>📊 Academic Performance</h3>
+        <p>View your grades and progress</p>
+      </div>
+    </div>
+
+    <div class="assignments-section">
+      <h2>Your Assignments</h2>
+      <div id="assignmentList">
+        <!-- Assignments will be loaded here -->
+      </div>
+    </div>
   </main>
 
   <script>
+    // Menu toggle function
     function toggleMenu() {
       document.getElementById("sideNav").classList.toggle("active");
       document.getElementById("overlay").classList.toggle("active");
     }
 
-    async function logout() {
-      const API_URL = "./backend/logout.php";
+    // Display user email
+    function displayUserInfo() {
+      const userEmail = localStorage.getItem('userEmail') || 'User';
+      document.getElementById('userEmail').textContent = userEmail;
+    }
 
-      try {
-          const response = await fetch(API_URL, {
-              method: "POST",
-              headers: {
-                  "Content-Type": "application/json"
-              }
-          });
+    // Display assignments from localStorage
+    function displayAssignments() {
+      const container = document.getElementById("assignmentList");
+      const assignments = JSON.parse(localStorage.getItem("assignments")) || [];
 
-          const result = await response.json();
+      if (assignments.length === 0) {
+        container.innerHTML = `
+          <div class="empty-state">
+            <h3>No assignments yet</h3>
+            <p>Create your first assignment to get started!</p>
+          </div>
+        `;
+        return;
+      }
 
-          if (response.ok && result.success) {
-              window.location.href = "login.html"; // Redirect to login page
-          } 
-      } catch (error) {
-          console.error("Network or server error:", error);
+      container.innerHTML = '';
+      assignments.forEach(assignment => {
+        const assignmentElement = document.createElement('div');
+        assignmentElement.className = 'assignment-item';
+        assignmentElement.innerHTML = `
+          <h3>${assignment.title}</h3>
+          <p>${assignment.description}</p>
+          <strong class="deadline">Deadline: ${assignment.deadline}</strong>
+        `;
+        container.appendChild(assignmentElement);
+      });
+    }
+
+    // Logout function
+    function logout() {
+      localStorage.removeItem('isLoggedIn');
+      localStorage.removeItem('userEmail');
+      window.location.href = 'login.html';
+    }
+
+    // Check login status
+    function checkLoginStatus() {
+      if (localStorage.getItem('isLoggedIn') !== 'true') {
+        window.location.href = 'login.html';
       }
     }
 
-    async function checkLoginStatus() {
-      try {
-          const response = await fetch("backend/login.php", {
-              method: "GET",
-              headers: { "Content-Type": "application/json" }
-          });
-
-          const result = await response.json();
-
-          if (!response.ok || !result.isLoggedIn) {
-              window.location.href = "login.html"; 
-          }
-      } catch (error) {
-          console.error("Network error:", error);
-          window.location.href = "login.html";
-      }
-    }
-
-    checkLoginStatus();
+    // Initialize dashboard
+    window.onload = function() {
+      checkLoginStatus();
+      displayUserInfo();
+      displayAssignments();
+    };
   </script>
-
 </body>
 </html>
