--- a/dashboard.html
+++ b/dashboard.html
@@ -13,13 +13,13 @@
 
     body {
       font-family: 'Segoe UI', sans-serif;
-      background: #f0fdf4;
+      background: #aee7bf;
       min-height: 100vh;
     }
 
     header {
       background: #1b4332;
-      color: white;
+      color: rgb(255, 255, 255);
       display: flex;
       justify-content: space-between;
       align-items: center;
