remove the entering link

--- a/dashboard.html
+++ b/dashboard.html
@@ -895,7 +895,7 @@
       try {
         new URL(link);
       } catch (e) {
-        alert('Please enter a valid URL (e.g., https://example.com)');
+        alert('Please enter a valid URL');
         return;
       }
       
