change naming text in div class

--- a/dashboard.html
+++ b/dashboard.html
@@ -877,9 +877,9 @@
           </div>
           <button class="copy-btn" onclick="copyMeetLink()">📋 Copy Link</button>
           <div style="margin-top: 15px; font-size: 0.9rem; color: #666;">
-            <p><strong>Next Session:</strong> Today, 10:00 AM - 11:30 AM</p>
-            <p><strong>Instructor:</strong> Prof. Smith</p>
-            <p><strong>Meeting ID:</strong> acadease-web-dev</p>
+            <p><strong>Session:</strong> Tuesday/Thursday, 10:00 AM - 11:30 AM</p>
+            <p><strong>Instructor:</strong> Prof. Jerome A Yanga.</p>
+            <p><strong>Meeting ID:</strong> webdev123</p>
           </div>
         </div>
       </div>
@@ -887,13 +887,13 @@
       <div class="classroom-container">
         <div class="classroom-card">
           <div class="classroom-header">
-            <h3>Database Systems</h3>
+            <h3>WEB DEVELOPMENT</h3>
           </div>
           <div class="classroom-body">
             <div class="classroom-info">
-              <p><strong>Instructor:</strong> Dr. Johnson</p>
-              <p><strong>Schedule:</strong> Tue & Thu, 2:00 PM</p>
-              <p><strong>Next Session:</strong> Today, 2:00 PM</p>
+              <p><strong>Instructor:</strong>Prof. Jerome A Yanga.</p>
+              <p><strong>Schedule:</strong> Tuesday, 7:30 AM</p>
+              <p><strong>Next Session:</strong> Thursday, 7:30 PM</p>
             </div>
             <div class="classroom-actions">
               <button class="classroom-btn primary" onclick="joinClassroom('database')">Join Class</button>
@@ -904,13 +904,12 @@
         
         <div class="classroom-card">
           <div class="classroom-header">
-            <h3>Software Engineering</h3>
+            <h3>WEB DEVELOPMENT</h3>
           </div>
           <div class="classroom-body">
             <div class="classroom-info">
-              <p><strong>Instructor:</strong> Dr. Williams</p>
-              <p><strong>Schedule:</strong> Mon & Fri, 1:00 PM</p>
-              <p><strong>Next Session:</strong> Monday, 1:00 PM</p>
+              <p><strong>Instructor:</strong>Prof. Jerome A Yanga.</p>
+              <p><strong>Schedule:</strong> Thursday, 7:30 PM</p>
             </div>
             <div class="classroom-actions">
               <button class="classroom-btn primary" onclick="joinClassroom('software')">Join Class</button>
