--- a/dashboard.html
+++ b/dashboard.html
@@ -900,20 +900,6 @@
             </div>
           </div>
         </div>
-        
-        <div class="classroom-card">
-          <div class="classroom-header">
-            <h3>WEB DEVELOPMENT</h3>
-          </div>
-          <div class="classroom-body">
-            <div class="classroom-info">
-              <p><strong>Instructor:</strong>Prof. Jerome A Yanga.</p>
-              <p><strong>Schedule:</strong> Thursday, 7:30 PM</p>
-            </div>
-            <div class="classroom-actions">
-              <button class="classroom-btn primary" onclick="joinClassroom('software')">Join Class</button>
-              <button class="classroom-btn secondary" onclick="viewMaterials('software')">Materials</button>
-            </div>
           </div>
         </div>
       </div>
@@ -947,38 +933,27 @@
             <th>Course</th>
             <th>Assignment</th>
             <th>Score</th>
-            <th>Weight</th>
-            <th>Date</th>
+            <th>Total %</th>
           </tr>
         </thead>
         <tbody>
           <tr>
             <td>WEB DEVELOPMENT</td>
             <td>HTML/CSS Project</td>
-            <td>95%</td>
-            <td>15%</td>
+            <td>100%</td>
             <td>2025-01-15</td>
           </tr>
           <tr>
             <td>WEB DEVELOPMENT</td>
-            <td>JavaScript Quiz</td>
-            <td>88%</td>
-            <td>10%</td>
+            <td>Quiz/Activity</td>
+            <td>15%</td>
             <td>2025-02-10</td>
           </tr>
           <tr>
             <td>WEB DEVELOPMENT</td>
             <td>Midterm Exam</td>
-            <td>90%</td>
             <td>30%</td>
             <td>2025-03-05</td>
-          </tr>
-          <tr>
-            <td>WEB DEVELOPMENT</td>
-            <td>Node.js Assignment</td>
-            <td>94%</td>
-            <td>15%</td>
-            <td>2025-03-20</td>
           </tr>
         </tbody>
       </table>
@@ -1027,7 +1002,7 @@
       <h3 id="modalAssignmentTitle">Submit Assignment</h3>
       <div class="form-group">
         <label for="submissionLink">Assignment/Activity Link</label>
-        <input type="url" id="submissionLink" placeholder="https://example.com/your-assignment" required>
+        <input type="url" id="submissionLink" placeholder="https://your-assignment/activity." required>
       </div>
       
       <div id="existingSubmission" style="display: none;">
