ill add text and function of viewing submit

--- a/dashboard.html
+++ b/dashboard.html
@@ -1386,12 +1386,12 @@
   </header>
 
   <div class="side-nav" id="sideNav">
-    <a href="#" onclick="showSection('courses')">📘 My Courses</a>
-    <a href="#" onclick="showSection('classroom')">🏫 Classroom</a>
-    <a href="#" onclick="showSection('calendar')">📅 Schedule</a>
-    <a href="#" onclick="showSection('activity')">📝 Activity</a>
-    <a href="#" onclick="showSection('grades')">📊 Grades</a>
-    <button onclick="logout()">🚪 Logout</button>
+    <a href="#" onclick="showSection('courses')">My Courses</a>
+    <a href="#" onclick="showSection('classroom')">Classroom</a>
+    <a href="#" onclick="showSection('calendar')">Schedule</a>
+    <a href="#" onclick="showSection('activity')">Activity</a>
+    <a href="#" onclick="showSection('grades')">Grades</a>
+    <button onclick="logout()">Logout</button>
   </div>
 
   <div class="overlay" id="overlay" onclick="toggleMenu()"></div>
@@ -1445,24 +1445,24 @@
       <h2>My Courses</h2>
       <div class="course-info">
         <h3>WEB DEVELOPMENT</h3>
-        <p>Course Code: CS101 | Instructor: Prof. Smith</p>
+        <p>Course Code: CPT11 | Instructor: Prof. Jerome A Yanga.</p>
       </div>
       
       <div class="course-details">
         <div class="detail-card">
-          <h4>📚 Course Description</h4>
+          <h4>Course Subject Type</h4>
           <p>Learn front-end and back-end web development technologies including HTML, CSS, JavaScript, and Node.js.</p>
         </div>
         <div class="detail-card">
-          <h4>📅 Schedule</h4>
-          <p>Monday & Wednesday<br>10:00 AM - 11:30 AM</p>
+          <h4>Schedule</h4>
+          <p>Tuesday & Thursday<br>10:00 AM - 11:30 AM</p>
         </div>
         <div class="detail-card">
-          <h4>📍 Location</h4>
-          <p>Room 205, Computer Science Building</p>
+          <h4>Location</h4>
+          <p>Building A304/CET CENTER</p>
         </div>
         <div class="detail-card">
-          <h4>📋 Requirements</h4>
+          <h4>Requirements</h4>
           <p>Midterm Exam: 30%<br>Final Project: 40%<br>Assignments: 30%</p>
         </div>
       </div>
@@ -1484,10 +1484,10 @@
           </div>
           <div class="meet-actions">
             <button class="meet-btn primary" onclick="joinGoogleMeet()">
-              <span>🎥</span> Join Now
+              <span></span> Join Now
             </button>
             <button class="meet-btn secondary" onclick="viewMeetDetails()">
-              <span>ℹ️</span> Details
+              <span></span> Details
             </button>
           </div>
         </div>
@@ -1499,7 +1499,7 @@
               https://meet.google.com/acadease-web-dev
             </a>
           </div>
-          <button class="copy-btn" onclick="copyMeetLink()">📋 Copy Link</button>
+          <button class="copy-btn" onclick="copyMeetLink()">Copy Link</button>
           <div style="margin-top: 15px; font-size: 0.9rem; color: #666;">
             <p><strong>Session:</strong> Tuesday/Thursday, 10:00 AM - 11:30 AM</p>
             <p><strong>Instructor:</strong> Prof. Jerome A Yanga.</p>
@@ -1589,7 +1589,7 @@
         </div>
       </div>
       
-      <button class="toggle-professor-view" onclick="toggleProfessorView()">👨‍🏫 Toggle Professor View</button>
+      <button class="toggle-professor-view" onclick="toggleProfessorView()">Toggle Professor View</button>
     </div>
 
     <!-- Grades Section -->
