ill change my local storage

--- a/dashboard.html
+++ b/dashboard.html
@@ -1371,7 +1371,7 @@
       padding: 20px;
       text-align: center;
       color: #666;
-      background: white;
+      background: rgb(151, 202, 174);
       border-radius: 5px;
     }
   </style>
@@ -1455,7 +1455,7 @@
         </div>
         <div class="detail-card">
           <h4>Schedule</h4>
-          <p>Tuesday & Thursday<br>10:00 AM - 11:30 AM</p>
+          <p>Tuesday & Thursday<br>7:30 AM -10:00 AM</p>
         </div>
         <div class="detail-card">
           <h4>Location</h4>
@@ -1463,7 +1463,7 @@
         </div>
         <div class="detail-card">
           <h4>Requirements</h4>
-          <p>Midterm Exam: 30%<br>Final Project: 40%<br>Assignments: 30%</p>
+          <p>Exam: 30%<br>Performance: 40%<br>Recitation/attendance: 30%</p>
         </div>
       </div>
     </div>
