adding function and adjusting color in index,style,script

--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AcadEase!</title>
-  <link rel="stylesheet" href="style.css"> 
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+  <!-- ADD CONTAINER HERE -->
+  <div class="container">
+    
   <header>
     <h1>AcadEase!</h1>
     <nav>
@@ -102,6 +105,8 @@
   <footer>
     <p>© 2025 AcadEase. All Rights Reserved.</p>
   </footer>
+  
+  </div> <!-- CLOSE CONTAINER HERE -->
 
   <script>
     document.getElementById("getStartedBtn").addEventListener("click", function(event) {
@@ -132,6 +137,7 @@
     });
   </script>
 
+  <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-auth.js"></script>
   <script src="script.js"></script> 
 </body>
 </html>
