--- a/dashboard.html
+++ b/dashboard.html
@@ -1550,7 +1550,6 @@
       <h2>My Courses</h2>
       <div class="course-info">
         <h3>WEB DEVELOPMENT</h3>
-        <p>Course Code: CPT11 | Instructor: Prof. Jerome A Yanga.</p>
       </div>
       
       <div class="course-details">
@@ -1606,8 +1605,7 @@
           </div>
           <button class="copy-btn" onclick="copyMeetLink()">Copy Link</button>
           <div style="margin-top: 15px; font-size: 0.9rem; color: #666;">
-            <p><strong>Session:</strong> Tuesday/Thursday, 10:00 AM - 11:30 AM</p>
-            <p><strong>Instructor:</strong> Prof. Jerome A Yanga.</p>
+            <p><strong>Session:</strong>Meeting</p>
             <p><strong>Meeting ID:</strong> webdev123</p>
           </div>
         </div>
@@ -1685,7 +1683,7 @@
       
       <!-- Professor View -->
       <div class="professor-view" id="professorView" style="display: none;">
-        <h3>Professor View - Student Submissions</h3>
+        <h3>View - Student Submissions</h3>
         <div id="studentSubmissions" class="student-submissions">
           <!-- Student submissions will be loaded here -->
         </div>
@@ -1770,7 +1768,7 @@
   <!-- Add Event Modal -->
   <div class="modal" id="addEventModal">
     <div class="modal-content">
-      <h3>Add Assignment to Calendar</h3>
+      <h3>Add to Calendar</h3>
       <form id="eventForm">
         <div class="form-group">
           <label for="eventTitle">Assignment Title</label>
