--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <!-- ADD CONTAINER HERE -->
   <div class="container">
     
   <header>
@@ -19,9 +18,10 @@
   </header>
 
   <section class="hero">
+    <img src="mainlogo.jpg" alt="AcadEase Logo">
     <div>
-      <h2> A Online Portal</h2>
-      <p>AcadEase helps students and teachers stay organized with assignments, schedules, and communication  all in one powerful platform.</p>
+      <h2>A Online Portal</h2>
+      <p>AcadEase helps students and teachers stay organized with assignments, schedules, and communication all in one powerful platform.</p>
       <a href="#" class="btn" id="getStartedBtn">Get Started</a>
 
       <div id="authButtons" style="display: none; margin-top: 20px;">
@@ -32,7 +32,7 @@
   </section>
 
   <section id="about" class="section">
-    <img src="mainlogo.png" alt="AcadEase Logo">
+    <img src="circle.png" alt="AcadEase Logo">
     <div class="about-text">
       <h2>About AcadEase</h2>
       <p>
@@ -106,7 +106,7 @@
     <p>© 2025 AcadEase. All Rights Reserved.</p>
   </footer>
   
-  </div> <!-- CLOSE CONTAINER HERE -->
+  </div>
 
   <script>
     document.getElementById("getStartedBtn").addEventListener("click", function(event) {
